--- a/generators/component/templates/package.json
+++ b/generators/component/templates/package.json
@@ -1,7 +1,10 @@
 {
   "name": "<%= packageName %>",
   "version": "0.0.0",
-  "main": "dist/<%= componentName %>.js",
+  "main": "lib/<%= componentName %>.js",
+  "license": "MIT",
+  "author": "CA Technologies",
+  "description": "CA Technologies React Component",
   "scripts": {
     "lint": "eslint ./src/ --ext .js",
     "flow": "flow",
@@ -12,30 +15,33 @@
     "storybook": "start-storybook -p 9001",
     "storybook:test": "storyshots",
     "storybook:deploy": "storybook-to-ghpages",
-    "prebuild": "rimraf ./dist",
-    "build": "babel --out-dir ./dist --ignore *.spec.js,*.stories.js ./src",
+    "prebuild": "rimraf ./lib",
+    "build": "babel --out-dir ./lib --ignore *.spec.js,*.stories.js ./src",
     "commit": "git-cz",
     "release": "semantic-release pre && npm publish && semantic-release post"
   },
+  "pre-commit": [
+    "lint"
+  ],
   "dependencies": {},
   "devDependencies": {
-    "@kadira/react-storybook-addon-info": "3.2.4",
-    "@kadira/storybook": "2.25.0",
+    "@kadira/react-storybook-addon-info": "3.3.0",
+    "@kadira/storybook": "2.34.0",
     "@kadira/storybook-deployer": "^1.2.0",
     "@kadira/storyshots": "^2.0.0",
     "babel": "6.5.2",
-    "babel-cli": "6.16.0",
-    "babel-core": "6.17.0",
-    "babel-eslint": "7.0.0",
-    "babel-loader": "6.2.5",
+    "babel-cli": "6.18.0",
+    "babel-core": "6.20.0",
+    "babel-eslint": "7.1.1",
+    "babel-loader": "6.2.9",
     "babel-plugin-react-transform": "2.0.2",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-plugin-transform-flow-strip-types": "^6.18.0",
-    "babel-plugin-transform-object-rest-spread": "6.16.0",
+    "babel-plugin-transform-object-rest-spread": "6.20.2",
     "babel-plugin-transform-runtime": "6.15.0",
-    "babel-polyfill": "6.16.0",
-    "babel-preset-es2015": "6.16.0",
-    "babel-preset-jest": "^16.0.0",
+    "babel-polyfill": "6.20.0",
+    "babel-preset-es2015": "6.18.0",
+    "babel-preset-jest": "^17.0.2",
     "babel-preset-react": "6.16.0",
     "babel-preset-stage-0": "6.16.0",
     "classnames": "2.2.5",
@@ -43,21 +49,23 @@
     "commitizen": "^2.8.6",
     "cz-conventional-changelog": "^1.2.0",
     "enzyme": "^2.5.1",
-    "eslint": "3.8.1",
-    "eslint-config-airbnb": "12.0.0",
-    "eslint-loader": "1.6.0",
+    "eslint": "3.12.1",
+    "eslint-config-airbnb": "13.0.0",
+    "eslint-loader": "1.6.1",
     "eslint-plugin-cssx": "0.3.3",
-    "eslint-plugin-import": "2.0.1",
-    "eslint-plugin-jsx-a11y": "2.2.3",
-    "eslint-plugin-react": "6.4.1",
-    "flow-bin": "^0.33.0",
-    "flow-coverage-report": "^0.1.0",
-    "jest": "^16.0.1",
-    "react": "15.3.2",
+    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-jsx-a11y": "3.0.1",
+    "eslint-plugin-react": "6.8.0",
+    "flow-bin": "^0.37.0",
+    "flow-coverage-report": "^0.2.0",
+    "jest": "^17.0.3",
+    "react": "15.4.1",
     "react-addons-test-utils": "^15.3.2",
     "react-dom": "^15.3.2",
     "rimraf": "^2.5.4",
-    "semantic-release": "^4.3.5"
+    "pre-commit": "^1.2.1",
+    "semantic-release": "^6.3.2",
+    "validate-commit-msg": "^2.8.2"
   },
   "jest": {
     "coverageDirectory": "./coverage/",
@@ -74,10 +82,18 @@
   "config": {
     "commitizen": {
       "path": "cz-conventional-changelog"
+    },
+    "validate-commit-msg": {
+      "types": "conventional-commit-types"
     }
   },
+  "keywords": [
+    "JS",
+    "React",
+    "CA Technologies"
+  ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/shanedasilva/<%= packageName %>.git"
+    "url": "https://github.com/CAAPIM/<%= packageName %>.git"
   }
 }
