--- a/package.json
+++ b/package.json
@@ -1,39 +1,36 @@
 {
   "name": "generator-ca",
   "description": "generator app",
-  "homepage": "http://github.com",
-  "author": {
-    "name": "Shane Da Silva",
-    "email": "shanemichaeldasilva@gmail.com",
-    "url": ""
-  },
+  "license": "MIT",
+  "author": "CA Technologies",
+  "description": "Yeoman generators for common CA components",
   "files": [
     "generators"
   ],
   "main": "generators/index.js",
   "keywords": [
-    "",
-    "yeoman-generator"
+    "yeoman-generator",
+    "CA Technologies"
   ],
   "dependencies": {
-    "yeoman-generator": "^0.23.0",
-    "chalk": "^1.0.0",
-    "yosay": "^1.0.0"
+    "yeoman-generator": "^0.24.1",
+    "chalk": "^1.1.3",
+    "yosay": "^1.2.1"
   },
   "devDependencies": {
-    "yeoman-test": "^1.0.0",
-    "yeoman-assert": "^2.0.0",
-    "eslint": "^3.11.1",
+    "yeoman-test": "^1.6.0",
+    "yeoman-assert": "^2.2.1",
+    "eslint": "^3.12.1",
     "eslint-config-ca": "git+ssh://git@github.com:CAAPIM/eslint-config-ca.git",
-    "gulp": "^3.9.0",
+    "gulp": "^3.9.1",
     "gulp-eslint": "^3.0.1",
-    "gulp-exclude-gitignore": "^1.0.0",
+    "gulp-exclude-gitignore": "^1.1.1",
     "gulp-line-ending-corrector": "^1.0.1",
-    "gulp-istanbul": "^1.0.0",
+    "gulp-istanbul": "^1.1.1",
     "gulp-mocha": "^3.0.1",
-    "gulp-plumber": "^1.0.0",
-    "gulp-nsp": "^2.1.0",
-    "semantic-release": "^4.3.5",
+    "gulp-plumber": "^1.1.0",
+    "gulp-nsp": "^2.4.2",
+    "semantic-release": "^6.3.2",
     "commitizen": "^2.8.6",
     "cz-conventional-changelog": "^1.2.0",
     "husky": "^0.11.9",
@@ -65,6 +62,5 @@
     "commitizen": {
       "path": "cz-conventional-changelog"
     }
-  },
-  "license": "Apache-2.0"
+  }
 }
