refactor(component): Added themer to react component generator and general clean up.
Added themer to react component generator and added legal files. Fixed some dependencies. Also added

eslint, babel, flow, jest configurations.

--- a/generators/component/templates/.flowconfig
+++ b/generators/component/templates/.flowconfig
@@ -2,8 +2,8 @@
 .*/node_modules/flow-coverage-report/.*
 .*/node_modules/config-chain/.*
 .*/node_modules/npmconf/.*
-.*/src/*.spec.js
-.*/src/*.stories.js
+.*/node_modules/findup/.*
+.*/node_modules/jss/.*
 
 [include]
 
