--- a/generators/component/templates/.babelrc
+++ b/generators/component/templates/.babelrc
@@ -1,12 +1,3 @@
 {
-  "presets": [
-    "es2015",
-    "react",
-    "stage-0"
-  ],
-  "plugins": [
-    "transform-decorators-legacy",
-    "transform-object-rest-spread",
-    "transform-flow-strip-types"
-  ]
+  "presets": ["ca"]
 }
