--- a/generators/component/templates/package.json
+++ b/generators/component/templates/package.json
@@ -1,14 +1,14 @@
 {
   "name": "<%= packageName %>",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "main": "lib/<%= componentName %>.js",
   "license": "MIT",
   "author": "CA Technologies",
   "description": "CA Technologies React Component",
   "scripts": {
-    "lint": "eslint ./src/ --ext .js",
-    "flow": "flow",
-    "flow:coverage": "flow-coverage-report -i './src/*.js' -t html -t text",
+    "lint": "eslint .",
+    "flow": "flow check",
+    "flow:coverage": "flow-coverage-report -i './src/**/*.js' -t html -t text --threshold 90",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -18,58 +18,48 @@
     "prebuild": "rimraf ./lib",
     "build": "babel --out-dir ./lib --ignore *.spec.js,*.stories.js ./src",
     "commit": "git-cz",
+    "commitmsg": "validate-commit-msg",
+    "precommit": "npm run lint && npm run flow && npm run test && npm run test:coverage",
     "release": "semantic-release pre && npm publish && semantic-release post"
   },
-  "pre-commit": [
-    "lint"
-  ],
-  "dependencies": {},
+  "dependencies": {
+    "classnames": "^2.2.5",
+    "react-themer-jss": "git+ssh://git@github.com:CAAPIM/react-themer-jss.git"
+  },
+  "peerDependencies": {
+    "react": ">=0.14"
+  },
   "devDependencies": {
-    "@kadira/react-storybook-addon-info": "3.3.0",
-    "@kadira/storybook": "2.34.0",
+    "@kadira/react-storybook-addon-info": "^3.3.0",
+    "@kadira/storybook": "^2.34.0",
     "@kadira/storybook-deployer": "^1.2.0",
     "@kadira/storyshots": "^2.0.0",
-    "babel": "6.5.2",
-    "babel-cli": "6.18.0",
-    "babel-core": "6.20.0",
-    "babel-eslint": "7.1.1",
-    "babel-loader": "6.2.9",
-    "babel-plugin-react-transform": "2.0.2",
-    "babel-plugin-transform-decorators-legacy": "1.3.4",
-    "babel-plugin-transform-flow-strip-types": "^6.18.0",
-    "babel-plugin-transform-object-rest-spread": "6.20.2",
-    "babel-plugin-transform-runtime": "6.15.0",
-    "babel-polyfill": "6.20.0",
-    "babel-preset-es2015": "6.18.0",
-    "babel-preset-jest": "^17.0.2",
-    "babel-preset-react": "6.16.0",
-    "babel-preset-stage-0": "6.16.0",
-    "classnames": "2.2.5",
+    "babel-cli": "^6.18.0",
+    "babel-eslint": "^7.1.1",
+    "babel-preset-ca": "git+ssh://git@github.com:CAAPIM/babel-preset-ca.git",
     "codecov": "^1.0.1",
     "commitizen": "^2.8.6",
     "cz-conventional-changelog": "^1.2.0",
     "enzyme": "^2.5.1",
-    "eslint": "3.12.1",
-    "eslint-config-airbnb": "13.0.0",
-    "eslint-loader": "1.6.1",
-    "eslint-plugin-cssx": "0.3.3",
-    "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-jsx-a11y": "3.0.1",
-    "eslint-plugin-react": "6.8.0",
+    "eslint": "^3.12.1",
+    "eslint-config-ca": "git+ssh://git@github.com:CAAPIM/eslint-config-ca.git",
+    "eslint-loader": "^1.6.1",
     "flow-bin": "^0.37.0",
     "flow-coverage-report": "^0.2.0",
     "jest": "^17.0.3",
-    "react": "15.4.1",
-    "react-addons-test-utils": "^15.3.2",
-    "react-dom": "^15.3.2",
+    "react": "^15.4.1",
+    "react-addons-test-utils": "^15.4.1",
+    "react-dom": "^15.4.1",
     "rimraf": "^2.5.4",
     "pre-commit": "^1.2.1",
     "semantic-release": "^6.3.2",
     "validate-commit-msg": "^2.8.2"
   },
   "jest": {
-    "coverageDirectory": "./coverage/",
-    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "src/**/*.js",
+      "!src/**/*.stories.js"
+    ],
     "coverageThreshold": {
       "global": {
         "branches": 90,
@@ -77,7 +67,11 @@
         "lines": 90,
         "statements": 90
       }
-    }
+    },
+    "unmockedModulePathPatterns": [
+      "node_modules/react/",
+      "node_modules/enzyme/"
+    ]
   },
   "config": {
     "commitizen": {
