--- a/generators/component/templates/.eslintrc
+++ b/generators/component/templates/.eslintrc
@@ -1,9 +1,4 @@
 {
   "parser": "babel-eslint",
-  "extends": "ca",
-  "env": {
-    "browser": true,
-    "node": true,
-    "jest": true
-  }
+  "extends": "ca"
 }
