--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "yeoman-test": "^1.6.0",
     "yeoman-assert": "^2.2.1",
     "eslint": "^3.12.1",
-    "eslint-config-ca": "git+ssh://git@github.com:CAAPIM/eslint-config-ca.git",
+    "eslint-config-ca": "^1.0.0",
     "gulp": "^3.9.1",
     "gulp-eslint": "^3.0.1",
     "gulp-exclude-gitignore": "^1.1.1",
