chore: changed NPM scope to @caapim

--- a/generators/component/templates/package.json
+++ b/generators/component/templates/package.json
@@ -23,7 +23,7 @@
     "release": "semantic-release pre && npm publish && semantic-release post"
   },
   "dependencies": {
-    "@ca/react-themer-jss": "^1.0.0",
+    "@caapim/react-themer-jss": "^1.0.0",
     "classnames": "^2.2.5"
   },
   "peerDependencies": {
