--- a/generators/component/templates/.travis.yml
+++ b/generators/component/templates/.travis.yml
@@ -12,14 +12,18 @@ cache:
   directories:
   - node_modules
 
+before_script:
+- npm prune
+
 script:
+- npm run lint
 - npm run flow
 - npm run storybook:test
 - npm run test:coverage
 - npm run build
 
 after_success:
-- node_modules/.bin/codecov
+- npm run codecov
 - npm run release
 
 branches:
