--- a/generators/component/templates/.travis.yml
+++ b/generators/component/templates/.travis.yml
@@ -21,6 +21,7 @@ script:
 - npm run storybook:test
 - npm run test:coverage
 - npm run build
+- npm run storybook:deploy
 
 after_success:
 - npm run codecov
