feat: update all dependencies and add stateless functional component generator
* re-generated generator using [generator-generator](https://github.com/yeoman/generator-generator)
* updated all dependencies in component generator
* fixed eslint, flow, tests for new standards
* added component type option, `class` or `function`
* improved generated component coverage to 100%

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,7 @@
 {
+  "extends": "ca",
   "env": {
-    "node": true,
-    "es6": true,
-  },
-  "extends": "ca"
+    "jest": true,
+    "node": true
+  }
 }
