--- a/generators/component/templates/codecov.yml
+++ b/generators/component/templates/codecov.yml
@@ -1,3 +1,9 @@
+#
+# Copyright (c) <%= currentYear %> CA. All rights reserved.
+# This software may be modified and distributed under the terms
+# of the MIT license. See the LICENSE file for details.
+#
+
 codecov:
   notify:
     require_ci_to_pass: yes
