--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "generator-ca",
-  "license": "MIT",
-  "author": "CA Technologies",
   "version": "0.0.0-development",
-  "description": "Yeoman generators for common CA components",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/CAAPIM/generator-ca.git"
+  "description": "Yeomangenerator to saffold common JavaScript modules and components. This library is meant to be used to generate all CA projects and components.",
+  "homepage": "https://github.com/CAAPIM/generator-ca",
+  "author": {
+    "name": "CA Technologies",
+    "email": "github@ca.com",
+    "url": "https://www.ca.com"
   },
   "files": [
     "generators"
@@ -14,46 +14,60 @@
   "main": "generators/index.js",
   "keywords": [
     "yeoman-generator",
-    "ca"
+    "ca",
+    "react",
+    "component"
   ],
+  "devDependencies": {
+    "eslint": "^3.18.0",
+    "eslint-config-ca": "^2.0.0",
+    "jest": "^19.0.2",
+    "yeoman-assert": "^3.0.0",
+    "yeoman-test": "^1.6.0"
+  },
+  "dependencies": {
+    "chalk": "^1.1.3",
+    "codecov": "^2.1.0",
+    "commitizen": "^2.9.6",
+    "cz-conventional-changelog": "^2.0.0",
+    "husky": "^0.13.3",
+    "lodash": "^4.17.4",
+    "parse-github-url": "^1.0.0",
+    "semantic-release": "^6.3.2",
+    "validate-commit-msg": "^2.12.0",
+    "yeoman-generator": "^1.0.0",
+    "yosay": "^2.0.0"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "generators/**/*.js",
+      "!generators/*/templates/**/*"
+    ],
+    "testPathIgnorePatterns": [
+      "<rootDir>/generators/component/templates/"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 90,
+        "functions": 90,
+        "lines": 90,
+        "statements": 90
+      }
+    }
+  },
   "scripts": {
     "lint": "eslint .",
-    "test": "gulp test",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
     "codecov": "codecov",
     "commit": "git-cz",
     "commitmsg": "validate-commit-msg",
     "precommit": "npm run lint && npm run test",
     "release": "semantic-release pre && npm publish && semantic-release post"
   },
-  "config": {
-    "validate-commit-msg": {
-      "types": "conventional-commit-types"
-    },
-    "commitizen": {
-      "path": "cz-conventional-changelog"
-    }
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/CAAPIM/generator-ca.git"
   },
-  "dependencies": {
-    "yeoman-generator": "^0.24.1",
-    "chalk": "^1.1.3",
-    "yosay": "^1.2.1"
-  },
-  "devDependencies": {
-    "codecov": "^1.0.1",
-    "commitizen": "^2.8.6",
-    "cz-conventional-changelog": "^1.2.0",
-    "eslint": "^3.13.1",
-    "eslint-config-ca": "^1.0.2",
-    "gulp": "^3.9.1",
-    "gulp-exclude-gitignore": "^1.1.1",
-    "gulp-istanbul": "^1.1.1",
-    "gulp-line-ending-corrector": "^1.0.1",
-    "gulp-mocha": "^3.0.1",
-    "gulp-plumber": "^1.1.0",
-    "husky": "^0.11.9",
-    "semantic-release": "^6.3.2",
-    "validate-commit-msg": "^2.8.2",
-    "yeoman-assert": "^2.2.1",
-    "yeoman-test": "^1.6.0"
-  }
+  "license": "MIT"
 }
