--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^3.18.0",
     "eslint-config-ca": "^2.0.0",
     "jest": "^19.0.2",
+    "rimraf": "^2.6.1",
     "yeoman-assert": "^3.0.0",
     "yeoman-test": "^1.6.0"
   },
@@ -32,6 +33,7 @@
     "cz-conventional-changelog": "^2.0.0",
     "husky": "^0.13.3",
     "lodash": "^4.17.4",
+    "mkdirp": "^0.5.1",
     "parse-github-url": "^1.0.0",
     "semantic-release": "^6.3.2",
     "validate-commit-msg": "^2.12.0",
@@ -41,10 +43,12 @@
   "jest": {
     "collectCoverageFrom": [
       "generators/**/*.js",
-      "!generators/*/templates/**/*"
+      "!generators/*/templates/**/*",
+      "!tests/acceptance"
     ],
     "testPathIgnorePatterns": [
-      "<rootDir>/generators/component/templates/"
+      "<rootDir>/generators/component/templates/",
+      "<rootDir>/tests/acceptance/"
     ],
     "coverageThreshold": {
       "global": {
@@ -58,6 +62,7 @@
   "scripts": {
     "lint": "eslint .",
     "test": "jest",
+    "test:acceptance": "node ./tests/acceptance/component.js",
     "test:coverage": "jest --coverage",
     "codecov": "codecov",
     "commit": "git-cz",
