--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_script:
 
 script:
   - npm run lint
-  - npm run test
+  - npm run test:coverage
   - npm run test:acceptance
 
 after_success:
